# rag-smart-customer-service

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPLOY_GUIDE.md  Dockerfile  QUICK_DEPLOY.md  README.md  _test_cache_mgr.py  app_qa.py  benchmark.py  cache_store.py  config_data.py  demo_fastapi.py  file_history_store.py  fix_longlines.py  hybrid_retriever.py  main.py  push_to_github.bat  pyproject.toml  rag_enhanced.py  requirements.txt  response_cache.json  skills-lock.json  tech_knowlege.markdown
.agent_backup/agent/: edges.py  graph.py  nodes.py  state.py  tools.py
.codex/: AGENTS.md
.github/workflows/: ci.yml
api/: main.py
cache/: cache_compat.py  cache_manager.py  cache_store.py
config/: config_data.py
docs/architecture/: overview.md
domain/model/: __init__.py  chat.py
eval/: rag_eval.py  rag_eval_dataset.json
infrastructure/: benchmark.py  database.py
retrieval/: hybrid_retriever.py  vector_stores.py
service/: knowledge_base.py  knowledge_version.py  mysql_history_store.py  parsers.py  rag_enhanced.py
tests/: test_architecture.py
ui/: app_file_uploader.py  app_qa.py
