[project]
name = "rag-customer-service"
version = "0.1.0"
description = "?? LangChain + Chroma + MySQL ? RAG ??????"
requires-python = "==3.11.*"
dependencies = [
    "chromadb==1.5.9",
    "dashscope==1.25.18",
    "fastapi==0.136.3",
    "jieba==0.42.1",
    "langchain==1.3.1",
    "langchain-chroma==1.1.0",
    "langchain-classic==1.0.7",
    "langchain-community==0.4.2",
    "langchain-core==1.4.0",
    "langchain-protocol==0.0.15",
    "langchain-text-splitters==1.1.2",
    "loguru==0.7.3",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "pydantic_core==2.46.4",
    "pytest-asyncio==1.4.0",
    "python-multipart==0.0.29",
    "redis==7.4.0",
    "uvicorn==0.48.0",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8",
    "pytest-asyncio==1.4.0",
    "ruff>=0.1,<1",
]

[tool.setuptools.packages.find]
include = ["*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"infrastructure/*" = ["UP004"]
"_test_cache_mgr.py" = ["UP004", "UP035"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
allow_untyped_defs = true
check_untyped_defs = false
warn_unused_ignores = true
exclude = ["_test_cache_mgr\\.py$"]

[[tool.mypy.overrides]]
module = [
    "streamlit", "langchain_chroma", "langchain_community",
    "langchain_core", "dashscope", "jieba", "redis", "loguru",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cache.cache_compat"]
disable_error_code = ["return-value", "union-attr", "misc"]

[[tool.mypy.overrides]]
module = ["service.mysql_history_store"]
disable_error_code = ["override"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -p asyncio"
asyncio_mode = "auto"
